# ChangeLog for sys-fs/duperemove
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-fs/duperemove/ChangeLog,v 1.1 2015/03/25 00:15:43 rich0 Exp $

*duperemove-0.09.1 (25 Mar 2015)

  25 Mar 2015; Richard Freeman <rich0@gentoo.org> +duperemove-0.09.1.ebuild,
  +metadata.xml:
  Add duperemove to repository.
