@@ -2,23 +2,27 @@
 Hash: SHA256
 
 DIST duperemove-0.09.1.tar.gz 54978 SHA256 58d5635fa48bf88108dd833453638ad394427750f58b5ee0f3f1a8f1ec9c141b SHA512 49de99b64c8b0a71a47474480f33b07f2e6602c355621a9d0c6c92a3b7c2f2f5e6c03abc4e2459a1b96fa9543767c0abe48c5c63daf53962a3033a3b1984a037 WHIRLPOOL bed45acfd63f49f44832589964a305614649b6f41013295d1710d784f8dfeb34ff5721ae641790b97b70541222987135377913843b516850f62689ad66a18661
+DIST duperemove-0.09.2.tar.gz 55715 SHA256 2f7155bb916f4827a940c7ceb16c785b529320e621d3c7cbbd78639a06e65094 SHA512 acc1c16ed3faf08e54d4adfcc9f852d2c967981bc461ab45b0673f46f2e86109020d56e641da9764d46f2cc53cbcad5d2aa014357a819ae170375d784b2c08c5 WHIRLPOOL b5cd27237fadbe9aecf76abf63788bcbbabcc17625f1d3daeeee2b315b1a3b9b67fa9309703857e0c564d53fd1573983aa9a55c5b406a56855af7911375bc60b
 EBUILD duperemove-0.09.1.ebuild 589 SHA256 dea0abef784123411bccb826a1971f3937e55b3c798f6528606dc818cca0ece3 SHA512 f518812efe5672658746b712669fe35bda8321c52bc605771bca5220a2de3940561877fb4aa7325d7ab09e6cde9691f065315f9fa4259755d306c7969c296553 WHIRLPOOL ce2ebe90c22fabbd3e56681340e97135451924f3f66f34f24f847c8b016010744ddcd93890ef56c900135bb7293d8f70ae39ca5e4512417168330e152b77e36b
-MISC ChangeLog 367 SHA256 014ccaaab4ee2a5938e3a044845371e702e2566ccbb605a223c60d3c1f71dc02 SHA512 7c1c8daa8d1249ae93397e4a2d83f9243ba24c5a46857c1e5447c0999ef990e7281b4563113bec9bdda2178a2f1f363475927b1586234c94c48c09abb13323bb WHIRLPOOL 3ed5509c9094aca9356c6f1b85b15e5d476d3011160bd9ccbc7f01cd5b6bb5906d9699364747686fb5e3c3ffcf61d7f25f942aeedeca660c12929e29fddd5137
-MISC metadata.xml 264 SHA256 4e1f403037dc0c34d89091607e771db3a9ef75819656e3fa5b0477b0ccceb665 SHA512 8668a852d475b397f0c871b302542a9cd4427f6209a7b146d7bf5eee6582993bcaba1bfbcb8766e7c13e293c9e64ebe3a4fb73bc8a86658ebcc7383b577ae0b8 WHIRLPOOL 367243d00115789ddb7abc524bf37d54a545d938c4f79f0d21e9e654656f7cb03f23eaf0d8fd5ee100c29aba9011b6a7d05b29b2ff8c128f73d6239ac507e75f
+EBUILD duperemove-0.09.2.ebuild 1026 SHA256 f15f426eb4bb141f7f408e33f68dca99c054a93fc74218bfc8d4adfdf87af908 SHA512 10ee4e82bd05bd3ce3bfab977d049a1962c060c27afbf2a5bc6942a65345f62917295fe1704decc422d0271f847b1e34d6c57790741f21cdc52a5d6bfdd9067b WHIRLPOOL 7689a31ee64439db969e023d349a196fe1ab057ddd309bb4faf7b8ebf986c26b4a7e9d598180728704090d4ad8611cc5ffacb30470727d6f41f1c7e37bd2f421
+MISC ChangeLog 631 SHA256 ea6ae87841475d001996a5b828fa4b6941936970884a39e5fb664d09ce7bc199 SHA512 e74d2016cd76ce921087f0cca977fb3f3608b2ae4a949fdb18e6d5f2f74dbc8705be77670ef32eef63b6f697906030b4d9d1c07531e2dd9eef10f56995c3fec6 WHIRLPOOL 79011726dd96494fae79d7bcaf8cc485d0f3a1e814ba52fc8e37403b75ba3e77a0a081a92b639d8106546e2b72b41f80d6cb371fc1c8913686b15a67d98438a2
+MISC metadata.xml 354 SHA256 dc1b8adf21fd7b69d47ff30c5f4ac3576ded6044c57d34ba4f077de73b98cf4d SHA512 212383d647685cbb384de0575de6edb7d93ecdb8683633d58ab9cfe0cbaf2211eccb88b59c48d35e0f03da84fa8eee1d74b00ea4f6bf895a518989fef49e30f7 WHIRLPOOL adfc2c3a3a07046ef0fdcac7cf6978a4e9a78473d8552c22a5f4bfacbd3493c657273dab567c6efc5b1fdbaf269f4dcb8487abda2b1b9cb7b1690c952b3a106e
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJVEf4xAAoJEPnrMGeMBPQUec0QAJdHm2DoeQraI+pM9Q/jXoxa
-H9o0liGgaeq3ZwBke42Jf3/vAStbpBmpX5Kh+CWryjRsMpVwqwwtVMrOzD0w7in9
-zvGkTB1wFAaXZ+UyV4h3fiF0Dz0HkwVP8ALbmM2kfvXSC+FBIcR9y06+DAOevfeH
-Hx8kykKdCxo8n6KSIbBE0mNYLQYsvJhZZ/uqamO5kQts3qqWuiMI0yDdDusbsEOo
-U6o24cCskZxF7Gukos2r7nR1kwv2Ze1cdw6opqlTXmPUGDwILpuDcxEzDB3pvhQR
-AtqX13ZqJhiSG6VeGlnnd7CNvexPvbqnoNGB2KwMJYVHG0lygSSD5Gx465JFTxN6
-iB4fSCUm/ETn/TxPBlbV/oMgRH/o2NXj1vZ5V/yjGzm0XZnID49C6OzouFPOWnZi
-ZPB1cpcv4XUSfA4IAh55Eery8U1Y/3OqGrP0LIOh55+5gxHacxHutyQjf5L/wUxu
-I5voSL3A6+nowJXN+mwnoAbava9dz/i/s2wzB4gBoGsS+RZrCxqX9vDhkYVT6TWM
-W5peIEAdJlP/i9JND9UgoRwJnPFJZ8/AH1bCFUgOjF6jVVkUadCB9pMErQTvt3Xe
-vBBcFK79HFfcsmHx4991pSq/q/9nU+ALbo+Mvf+Q65rKWq1JWspqBybaAHUsLKQy
-kwhtPpU9TWAFiFjZrbu2
-=tCob
+iQJ8BAEBCABmBQJVIsErXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2REJCMDdDQzRGMERBRDA2RUEwQUZFNDFC
+MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZODr8P/2TK3KV5EEwyqiL+Ag22PlCc
+oj04f5gSET/YYN9LEHvrTZk+1/FaCtLOZaS6kJB6e4yxBp9evt0J4ve2ouBMMwhq
+tDuvWSsYAUHzIfFf16fWqEf2z/iA/H8iqNgw7DCQhqOgmpltnEkXxEOZ0RYorxyY
+CvNG9XcaaOu9SuwSpJYyniwLyIn89+lmocN9RjB5+uaXBiq+KuZEutrhNZnV5MPD
+Wv8OkYV5filLsoSiGGppCD+H69izCxc72xjPsWkVMzv7w3TU7Cg+nv8B+LVDjd3W
+NPipsIualZNvRSFYk9k0P4gEHYbATwiaOUk+HwazdDbzpReIEIW6Qphsa8IQ6khE
+5vFtYv3I+X6YoI7AUWV89voBPmIgxDtXJKqhmi9HsK565i6I3WXdKJigrs30UmnF
+1fjUVannRSeTK2BKF4DcD62+lrSpoFAs7Q3d3Qh30eSxuR3lBluZs3KdsA377WHj
+ThpuBvPMb+PrqC8aGl4GahrEHWWBxX4357KZsiaRnu7lNn96jr0Np3kTFCG+wy3a
+o7o6gKDP/DGZIkbmJkBHOSPO4SxNCBI5Mebw00HHRgsAXXnNZ8+ASNB08+07LSfy
+hnPlco5Abm5UQrKBPbbkG+E8UX6lgynj+Rb9sEEHMCwTuTJW88+X3shWP6C3ZTUq
+2fv0oS4jbEhs8gyMrFAm
+=+ACL
 -----END PGP SIGNATURE-----
